2001-02-09  Hans Petter Jansson  <hpj@ximian.com>

	* *-conf.in: Added platform comparisons and die if necessary.

2001-02-09  Hans Petter Jansson  <hpj@ximian.com>

	* platform.pl.in: (xst_platform_ensure_supported): Implement.

2001-02-09  Hans Petter Jansson  <hpj@ximian.com>

	* *.in: Removed -*-perl-*- lines that were confusing Emacs.

2001-02-09  Arturo Espinosa <arturo@ximian.com>

	* network-conf.in: removed a bunch of set_* functions, whose functionality
	  already is in network.pl.in.
	* network.pl.in: almost finished, lots of bug fixes. added bootproto support.
	* replace.pl.in: xst_replace_chat implemented.
	* network.pl.in, replace.pl.in: fixed conflicts with new general function namings.
	* network.pl.in: wvdialer parsing support. Minor indentation fix.
	* parse.pl.in: fix to ini parser and new parser to get ini sections.
	* replace.pl.in: similar fix to ini replacer, and minor indentation fix.
	
2001-02-08  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in: Added missing dependency on service.pl.

2001-02-08  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in: New file.
	* boot-conf.in: Removed stuff which is in boot.pl.in.

2001-02-07  Hans Petter Jansson  <hpj@ximian.com>

	* be.pl.in, boot-conf.in, disks-conf.in, file.pl.in, 
	  gen-reportcode-list.sh, general.pl.in, guess_system.sh, 
	  hardware-conf.in, media.pl.in, memory-conf.in, 
	  nameresolution-conf.in, network-conf.in, network.pl.in, 
	  networking-conf.in, parse.pl.in, platform.pl.in, 
	  removable-media.pl.in, replace.pl.in, report.pl.in, 
	  service.pl.in, shares-conf.in, time-conf.in, users-conf.in,
	  util.pl.in, xml.pl.in: be_ -> xst_

2001-02-07  Hans Petter Jansson  <hpj@ximian.com>

	* be.pl.in: Refactored into obsoletion.

	* file.pl.in, general.pl.in, platform.pl.in, report.pl.in,
	  service.pl.in, util.pl.in, xml.pl.in: Added.

	* boot-conf.in, disks-conf.in, memory-conf.in,
	  network-conf.in, shares-conf.in, time-conf.in, users-conf.in,