@@ -1,3 +1,12 @@
+2001-02-10  Arturo Espinosa Aldama  <arturo@ximian.com>
+
+	* network.pl.in: (xst_network_get_interface_{replace,parse}_table) added wvdial support.
+	  (xst_network_ensure_local_host_entry) changed name: added "network" prefix.
+	  (xst_network_dialing_set) save the wvdial configuration.
+	* network-conf.in: (xml_print_hash) a more general instance of xml_print_interfaces, to
+	  handle both interfaces and dialing.
+	  (xml_parse_dialing) parse the wvdial configuration from XML to internal hash.
+	
 2001-02-09  Hans Petter Jansson  <hpj@ximian.com>
 
 	* *-conf.in: Added platform comparisons and die if necessary.
@@ -17,7 +26,7 @@
 	* network.pl.in: almost finished, lots of bug fixes. added bootproto support.
 	* replace.pl.in: xst_replace_chat implemented.
 	* network.pl.in, replace.pl.in: fixed conflicts with new general function namings.
-	* network.pl.in: wvdialer parsing support. Minor indentation fix.
+	* network.pl.in: (xst_network_dialing_get) wvdialer parsing support. Minor indentation fix.
 	* parse.pl.in: fix to ini parser and new parser to get ini sections.
 	* replace.pl.in: similar fix to ini replacer, and minor indentation fix.
 	
